k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-audit-portal
  namespace: log-audit
spec:
  selector:
    app: log-audit-portal
  ports:
    - port: 5055
      targetPort: 5055
